--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "learn"
   ],
   "author": "Stéphane Dreyfus",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
+  }
 }
